--- a/src/app/shared/components/contract/contract.html
+++ b/src/app/shared/components/contract/contract.html
@@ -36,6 +36,7 @@
           ></app-contract-status-bar>
         </td>
       </tr>
+      <tr><app-user-list></app-user-list></tr>
     </tbody>
   </table>
 </div>
