--- a/src/app/auth/register/register.scss
+++ b/src/app/auth/register/register.scss
@@ -2,7 +2,7 @@
   min-height: 100vh;
   display: flex;
   background: #f6f8fc;
-  font-family: 'Cairo', sans-serif;
+  font-family: "Frutiger LT Arabic";
 }
 
 /* LEFT VISUAL */
