--- a/src/app/core/Services/language.service/language.service.scss
+++ b/src/app/core/Services/language.service/language.service.scss
@@ -3,7 +3,7 @@
 ================================ */
 
 body {
-  font-family: 'Cairo', sans-serif;
+  font-family: "Frutiger LT Arabic";
 }
 
 body.rtl {
